--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /*
-Project Name: Blank Template
-Client: Your Client
-Author: Your Name
-Developer @GA in NYC
+Project Name: Final Project, Animation Library 
+Client: GA FEWD
+Author: George Voke
+Developer @GA in LDN
 */
 
 
@@ -10,26 +10,64 @@ Developer @GA in NYC
 /* SETUP
 /*******************************************/
 
+
 /* Box Model Hack */
 * {
-     -moz-box-sizing: border-box; /* Firexfox */
-     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
-     box-sizing: border-box; /* IE */
+    -moz-box-sizing: border-box; /* Firexfox */
+    -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
+    box-sizing: border-box; /* IE */
 }
 
 /* Clear fix hack */
+.clearfix:before,
 .clearfix:after {
-     content: ".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     line-height: 0;
-     height: 0;
+    content: " ";
+    display: table;
 }
+
+.clearfix:after {
+    clear: both;
+}
+
 
 /******************************************
 /* BASE STYLES
 /*******************************************/
+
+
+html {
+	font-size: 16px;
+  	font-weight: 400;
+  	transition: all 300ms;
+}
+
+a {
+	text-decoration: none;
+	color: #FFF;
+}
+
+
+/******************************************
+/* FONT SETUP
+/*******************************************/
+
+
+body {
+	font-family: 'Rubik', sans-serif;
+	color: #FFF;
+}
+
+h1 {
+	font-family: 'Abril Fatface', cursive;
+	font-size: 72px;
+	color: #222;
+	margin-top: 8%;
+  	margin-bottom: 5%;
+}
+
+p {
+	line-height: 1.5;
+}
 
 
 /******************************************
@@ -37,10 +75,297 @@ Developer @GA in NYC
 /*******************************************/
 
 
+nav {
+	text-align: center;
+}
+
+nav li {
+	display: inline-block;
+	margin-right: 15px;
+	margin-top: 12px;
+}
+
+nav li:last-child {
+	margin-right: 0px;
+}
+
+nav a {
+	font-weight: 500;
+	color: #c64f4f;
+}
+
+nav a:hover {
+	transition: all 300ms;
+	color: #892e2e;
+	/*color: rgba(0,0,0,0.6);*/
+}
+
+.hide {
+	display: none;
+}
+
+.selected {
+	color: #222;
+}
+
+.selected:hover {
+	color: #222;
+	cursor: default;
+}
+
+.curve-one {
+	background: url(../assets/curve-one.svg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: bottom;
+    background-size: 100.2%;
+    background-color: #EFB0B0;
+}
+
+.curve-two {
+	background: url(../assets/curve-two.svg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: bottom;
+    background-size: 100.2%;
+    background-color: #EFB0B0;
+}
+
+.curve-three {
+	background: url(../assets/curve-three.svg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: bottom;
+    background-size: 100.2%;
+    background-color: #EFB0B0;
+}
+
+.curve-four {
+	background: url(../assets/curve-four.svg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: bottom;
+    background-size: 100.2%;
+    background-color: #EFB0B0;
+}
+
+.curve-five {
+	background: url(../assets/curve-five.svg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: bottom;
+    background-size: 100.2%;
+    background-color: #EFB0B0;
+}
+
+.curve-six {
+	background: url(../assets/curve-six.svg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: bottom;
+    background-size: 100.2%;
+    background-color: #EFB0B0;
+}
+
+.container {
+	width: 700px;
+	/*width: 50%;*/
+	/*max-width: 900px;*/
+	margin: 0 auto;
+}
+
+/*.curve-editor .container {
+	margin-top: 8%;
+}*/
+
+.curve-editor {
+	text-align: center;
+}
+
+.controls {
+	margin-top: 65px;
+}
+
+.speed-sect {
+	display: inline-block;
+	text-align: right;
+	width: 15%;
+	/*background-color: red;*/
+}
+
+.slider-sect {
+	display: inline-block;
+	width: 68%;
+	/*background-color: red;*/
+}
+
+.play-sect {
+	display: inline-block;
+	width: 15%;
+	/*background-color: red;*/
+}
+
+/******************************************
+/* SLIDER
+/*******************************************/
+
+
+.slider:hover {
+	/*opacity: 1;*/
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.slider {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 100%;
+	height: 8px;
+	background: rgba(0, 0, 0, 0.4);
+	border-radius: 4px;
+	outline: none;
+	opacity: 1.0;
+	-webkit-transition: 0.2s;
+	transition: 0.2s;
+}
+
+.slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 50px;
+	height: 50px;
+	border-radius: 25px;
+	background: #ffffff;
+	cursor: col-resize;
+	-webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+	box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+}
+
+.speed {
+	font-weight: 500;
+	display: inline;
+	color: rgba(0,0,0,0.6);
+	line-height: 20px;
+	text-align: right;
+	border-radius: 5px;
+}
+
+.play i {
+	text-align: left;
+	font-size: 14px;
+	margin-right: 40%;
+	padding: 10px 9.5px 10px 12.5px;
+	border-radius: 50%;
+	background-color: rgba(0,0,0,0.4);
+}
+
+.play i:hover {
+	background-color: rgba(0,0,0,0.65);
+	transition: all 300ms;
+
+	/*-webkit-transition: all 100ms cubic-bezier(0.250, 0.100, 0.250, 1.000); 
+  	-moz-transition: all 100ms cubic-bezier(0.250, 0.100, 0.250, 1.000); 
+  	-o-transition: all 100ms cubic-bezier(0.250, 0.100, 0.250, 1.000); 
+  	transition: all 100ms cubic-bezier(0.250, 0.100, 0.250, 1.000);*/
+}
+
+.play i:active, .create:active {
+	color: rgba(255,255,255,0.4);
+	transition: all 300ms;
+}
+
+.create {
+	display: inline-block;
+	letter-spacing: 0.8px;
+	margin-top: 70px;
+	padding: 12px 28px 12px 28px;
+	border-radius: 4px;
+	background-color: rgba(0,0,0,0.4);
+}
+
+.create:hover {
+	background-color: rgba(0,0,0,0.6);
+	transition: all 300ms;
+}
+
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
 
+.preview-ball {
+	width: 90px;
+	height: 90px;
+	border-radius: 50%;
+	margin-left: -60px;
+	background-color: rgba(255,255,255,0.9);
+	-webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+}
+
+.preview-one {
+	-webkit-transition: all 1000ms cubic-bezier(0.425, 0, 0.465, 1); /* older webkit */
+	-webkit-transition: all 1000ms cubic-bezier(0.510, -0.600, 0.610, 2.200); 
+  	-moz-transition: all 1000ms cubic-bezier(0.510, -0.600, 0.610, 2.200); 
+  	-o-transition: all 1000ms cubic-bezier(0.510, -0.600, 0.610, 2.200); 
+  	transition: all 1000ms cubic-bezier(0.510, -0.600, 0.610, 2.200);
+}
+
+.preview-two {
+	-webkit-transition: all 1400ms cubic-bezier(0.000, 0.990, 1.000, 0.000); 
+  	-moz-transition: all 1400ms cubic-bezier(0.000, 0.990, 1.000, 0.000); 
+  	-o-transition: all 1400ms cubic-bezier(0.000, 0.990, 1.000, 0.000); 
+  	transition: all 1400ms cubic-bezier(0.000, 0.990, 1.000, 0.000);
+}
+
+.preview-three {
+	-webkit-transition: all 800ms cubic-bezier(0.000, 0.390, 0.645, 1.000); 
+  	-moz-transition: all 800ms cubic-bezier(0.000, 0.390, 0.645, 1.000); 
+  	-o-transition: all 800ms cubic-bezier(0.000, 0.390, 0.645, 1.000); 
+  	transition: all 800ms cubic-bezier(0.000, 0.390, 0.645, 1.000);
+}
+
+.preview-four {
+	-webkit-transition: all 800ms cubic-bezier(0.910, 0.000, 1.000, 0.490); 
+  	-moz-transition: all 800ms cubic-bezier(0.910, 0.000, 1.000, 0.490); 
+  	-o-transition: all 800ms cubic-bezier(0.910, 0.000, 1.000, 0.490); 
+  	transition: all 800ms cubic-bezier(0.910, 0.000, 1.000, 0.490);
+}
+
+.preview-five {
+	-webkit-transition: all 600ms cubic-bezier(0.135, 1, 0.930, 1); /* older webkit */
+	-webkit-transition: all 600ms cubic-bezier(0.135, 1.650, 0.930, 1.400); 
+  	-moz-transition: all 600ms cubic-bezier(0.135, 1.650, 0.930, 1.400); 
+  	-o-transition: all 600ms cubic-bezier(0.135, 1.650, 0.930, 1.400); 
+  	transition: all 600ms cubic-bezier(0.135, 1.650, 0.930, 1.400);
+}
+
+.preview-six {
+	-webkit-transition: all 1200ms cubic-bezier(0.460, 0, 1.000, 0.075); /* older webkit */
+	-webkit-transition: all 1200ms cubic-bezier(0.460, -0.590, 1.000, 0.075); 
+  	-moz-transition: all 1200ms cubic-bezier(0.460, -0.590, 1.000, 0.075); 
+  	-o-transition: all 1200ms cubic-bezier(0.460, -0.590, 1.000, 0.075); 
+  	transition: all 1200ms cubic-bezier(0.460, -0.590, 1.000, 0.075);
+}
+
+.preview-speed {
+}
+
+.move-horizontal {
+	margin-left: 100%;
+}
+
+.curve-css .container {
+	position: relative;
+	margin-top: 12%;
+	border-radius: 6px;
+	padding: 40px 20px 40px 40px;
+	background-color: rgba(0,0,0,0.4);
+	/*background-color: #c64f4f;*/
+	/*-webkit-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);*/
+}
 
 
